--- a/PROD/CONF/spark-collect-cron-tasks.conf
+++ b/PROD/CONF/spark-collect-cron-tasks.conf
@@ -38,7 +38,7 @@ crontasks +=
       , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
       , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
       , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
 
@@ -61,7 +61,7 @@ crontasks +=
       , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
       , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
       , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
 
@@ -84,7 +84,7 @@ crontasks +=
       , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
       , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
       , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
 
@@ -107,7 +107,7 @@ crontasks +=
       , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
       , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
       , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
 
@@ -130,7 +130,7 @@ crontasks +=
       , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
       , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
       , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
 
@@ -153,7 +153,7 @@ crontasks +=
       , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
       , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
       , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
 
@@ -176,7 +176,7 @@ crontasks +=
       , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
       , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
       , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
 
@@ -199,7 +199,7 @@ crontasks +=
       , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
       , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
       , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
 
@@ -222,7 +222,7 @@ crontasks +=
       , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
       , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
       , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
 
@@ -245,7 +245,7 @@ crontasks +=
       , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
       , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
       , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
 
@@ -268,7 +268,7 @@ crontasks +=
       , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
       , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
       , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
 
@@ -292,7 +292,7 @@ crontasks +=
       , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
       , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
       , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
 
@@ -315,7 +315,7 @@ crontasks +=
       , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
       , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
       , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
 
@@ -338,7 +338,7 @@ crontasks +=
       , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
       , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
       , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
 
@@ -361,7 +361,7 @@ crontasks +=
       , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
       , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
       , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
 
@@ -386,7 +386,7 @@ crontasks +=
       , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
       , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
       , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
 
@@ -410,7 +410,7 @@ crontasks +=
       , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
       , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
       , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
 
@@ -438,6 +438,6 @@ crontasks +=
           , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
           , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
           , {"param" : "--conf spark.network.timeout=360s"}
-          , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+          , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
         ]
   }
