spark_ft_subscription dependances

--- a/PROD/CONF/spark-collect-cron-tasks.conf
+++ b/PROD/CONF/spark-collect-cron-tasks.conf
@@ -418,7 +418,7 @@ crontasks +=
 //--###**************************************#####---
 //--###        CHARGEMENT MVAS
 //--###**************************************#####---
-// Chargement de SPARK_IT-SMSC-MVAS-A2P
+// Chargement de SPARK-IT-SMSC-MVAS-A2P
 
 crontasks +=
   {
