update de load ft a data

--- a/PROD/CONF/IN_ZTE/FT/load-ft-a-gprs-activity.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-a-gprs-activity.conf
@@ -26,7 +26,7 @@ flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
-flux.inline.exec-queries += "ANALYZE TABLE MON.FT_CRA_GPRS PARTITION(SESSION_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
+//flux.inline.exec-queries += "ANALYZE TABLE MON.FT_CRA_GPRS PARTITION(SESSION_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/compute_and_insert_into_ft_a_gprs_activity.hql"
 
