gestion des udfs

--- a/PROD/CONF/MSC/load-spark-ft-ag-interco.conf
+++ b/PROD/CONF/MSC/load-spark-ft-ag-interco.conf
@@ -45,11 +45,11 @@ flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=256"
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
-flux.inline.exec-queries += "DROP  FUNCTION IF EXISTS FN_INTERCO_DESTINATION"
+flux.inline.exec-queries += "DROP  TEMPORARY FUNCTION IF EXISTS FN_INTERCO_DESTINATION"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_INTERCO_DESTINATION as 'cm.orange.bigdata.udf.IntercoDestination'"
-flux.inline.exec-queries += "DROP  FUNCTION IF EXISTS FN_INTERCO_TRUNCKNAME_DEST"
+flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS FN_INTERCO_TRUNCKNAME_DEST"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_INTERCO_TRUNCKNAME_DEST as 'cm.orange.bigdata.udf.IntercoTrunckNameDest'"
-flux.inline.exec-queries += "DROP  FUNCTION IF EXISTS FN_GET_OPERATOR_CODE"
+flux.inline.exec-queries += "DROP TEMPORARY  FUNCTION IF EXISTS FN_GET_OPERATOR_CODE"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/MSC/AG_INTERCO/compute_and_insert_into_spark_ft_ag_interco.hql"
