--- a/PROD/CONF/MSC/load-spark-ft-msc-transaction.conf
+++ b/PROD/CONF/MSC/load-spark-ft-msc-transaction.conf
@@ -43,13 +43,21 @@ flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=128"
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.exec-queries += "DROP  TEMPORARY FUNCTION IF EXISTS FN_HUA_TRANSACTION_TYPE"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_HUA_TRANSACTION_TYPE as 'cm.orange.bigdata.udf.HuaTransactionType'"
+flux.inline.exec-queries += "DROP  TEMPORARY FUNCTION IF EXISTS FN_GET_NNP_MSISDN_SIMPLE_DESTN"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_NNP_MSISDN_SIMPLE_DESTN as 'cm.orange.bigdata.udf.GetNnpMsisdnSimpleDestn'"
+flux.inline.exec-queries += "DROP  TEMPORARY FUNCTION IF EXISTS FN_HUA_SUBS_TYPE"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_HUA_SUBS_TYPE as 'cm.orange.bigdata.udf.HuaSubsType'"
+flux.inline.exec-queries += "DROP  TEMPORARY FUNCTION IF EXISTS FN_HUA_CALL_TYPE"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_HUA_CALL_TYPE as 'cm.orange.bigdata.udf.HuaCallType'"
+flux.inline.exec-queries += "DROP  TEMPORARY FUNCTION IF EXISTS FN_HUA_CALLER_SUBR"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_HUA_CALLER_SUBR as 'cm.orange.bigdata.udf.HuaCallerSubr'"
+flux.inline.exec-queries += "DROP  TEMPORARY FUNCTION IF EXISTS FN_HUA_PARTNER_ID"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_HUA_PARTNER_ID as 'cm.orange.bigdata.udf.HuaPartnerId'"
+flux.inline.exec-queries += "DROP  TEMPORARY FUNCTION IF EXISTS FN_HUA_PARTNER_GT"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_HUA_PARTNER_GT as 'cm.orange.bigdata.udf.HuaPartnerGt'"
+flux.inline.exec-queries += "DROP  TEMPORARY FUNCTION IF EXISTS FN_GET_NNP_MSISDN_9DIGITS"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_NNP_MSISDN_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/MSC/compute_and_insert_into_spark_ft_msc_transaction.hql"
 //flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
