--- a/PROD/CONF/MSC/load-spark-ft-x-interco-final.conf
+++ b/PROD/CONF/MSC/load-spark-ft-x-interco-final.conf
@@ -44,7 +44,7 @@ flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
-flux.inline.exec-queries += "DROP  FUNCTION IF EXISTS FN_FAISEAU_TRUNCK_MSC_HUAWEI"
+flux.inline.exec-queries += "DROP  TEMPORARY FUNCTION IF EXISTS FN_FAISEAU_TRUNCK_MSC_HUAWEI"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_FAISEAU_TRUNCK_MSC_HUAWEI as 'cm.orange.bigdata.udf.FaiseauTrunckMscHuawei'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/MSC/X_INTERCO_FINAL/compute_and_insert_into_spark_ft_x_interco_final.hql"
 //flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
