account activity update

--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -229,7 +229,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_FT_ACCOUNT_ACTIVITY",
-    cron = "0 15/20 0-4 * * ?",
+    cron = "0 15/20 0 * * ?",
     configFile = "/PROD/CONF/ACCOUNT_ACTIVITY/load-spark-ft-account-activity.conf",
     taskType = "BATCH"
     taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
@@ -273,7 +273,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_FT_CONTRACT_SNAPSHOT",
-    cron = "0 10/20 0-4 * * ?",
+    cron = "0 10/20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-contract-snapshot.conf",
     taskType = "BATCH"
     taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
