--- a/PROD/CONF/ACCOUNT_ACTIVITY/load-spark-ft-account-activity1.conf
+++ b/PROD/CONF/ACCOUNT_ACTIVITY/load-spark-ft-account-activity1.conf
@@ -37,13 +37,13 @@ flux.exec-query.execution.mode = "JDBC"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/ACCOUNT_ACTIVITY/prequery_spark_ft_account_activity.hql"
 
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
-flux.inline.exec-queries += "DROP  FUNCTION IF EXISTS fn_get_sorted_list_item"
+flux.inline.exec-queries += "DROP TEMPORARY  FUNCTION IF EXISTS fn_get_sorted_list_item"
 flux.inline.exec-queries += "create temporary function fn_get_sorted_list_item as 'cm.orange.bigdata.udf.FnGetSortedListItem'"
-flux.inline.exec-queries += "DROP  FUNCTION IF EXISTS fn_format_msisdn_to_9digits"
+flux.inline.exec-queries += "DROP TEMPORARY  FUNCTION IF EXISTS fn_format_msisdn_to_9digits"
 flux.inline.exec-queries += "create temporary function fn_format_msisdn_to_9digits as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
-flux.inline.exec-queries += "DROP  FUNCTION IF EXISTS FN_GET_NNP_MSISDN_SIMPLE_DESTN"
+flux.inline.exec-queries += "DROP TEMPORARY  FUNCTION IF EXISTS FN_GET_NNP_MSISDN_SIMPLE_DESTN"
 flux.inline.exec-queries += "create temporary function FN_GET_NNP_MSISDN_SIMPLE_DESTN as 'cm.orange.bigdata.udf.GetNnpMsisdnSimpleDestn'"
-flux.inline.exec-queries += "DROP  FUNCTION IF EXISTS FN_NNP_SIMPLE_DESTINATION"
+flux.inline.exec-queries += "DROP TEMPORARY  FUNCTION IF EXISTS FN_NNP_SIMPLE_DESTINATION"
 flux.inline.exec-queries += "create temporary function FN_NNP_SIMPLE_DESTINATION as 'cm.orange.bigdata.udf.GetNnpSimpleDestn'"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/ACCOUNT_ACTIVITY/compute_and_insert_spark_ft_account_activity.hql"
