--- a/PROD/CONF/ACCOUNT_ACTIVITY/load-ft-account-activity.conf
+++ b/PROD/CONF/ACCOUNT_ACTIVITY/load-ft-account-activity.conf
@@ -33,7 +33,8 @@ flux.exec-queries += "/PROD/SCRIPTS/FT/ACCOUNT_ACTIVITY/compute_and_insert_ft_ac
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
-flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
+flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
+flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
 // Prequery variables
 flux.hive.extra-conf += "--hivevar date_offset=32"
