--- a/PROD/CONF/ACCOUNT_ACTIVITY/load-spark-ft-account-activity.conf
+++ b/PROD/CONF/ACCOUNT_ACTIVITY/load-spark-ft-account-activity.conf
@@ -36,7 +36,8 @@ flux.has-post-queries = false
 flux.exec-query.execution.mode = "JDBC"
 flux.inline.exec-queries += "set  hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "set hive.exec.dynamic.partition.mode=nonstrict"
-flux.inline.exec-queries += "set hive.enforce.bucketing=true"
+flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
+flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/ACCOUNT_ACTIVITY/prequery_spark_ft_account_activity.hql"
 
