bascule en mode batch

--- a/PROD/CONF/drop_it_partitions.conf
+++ b/PROD/CONF/drop_it_partitions.conf
@@ -41,21 +41,21 @@ flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_EMERGENCY_CREDIT DROP partit
 
 flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_EMERGENCY_DATA DROP partition (TRANSACTION_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_PRICE_PLAN_EXTRACT  DROP partition (ORIGINAL_FILE_DATE < '###SLICE_VALUE###')"
+flux.inline.exec-queries += "ALTER TABLE CDR.SPARK_IT_ZTE_PRICE_PLAN_EXTRACT  DROP partition (ORIGINAL_FILE_DATE < '###SLICE_VALUE###')"
 
 //ALTER TABLE CDR.IT_ZTE_PROD_SPEC_EXTRACT DROP partition (CREATE_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_ACC_NBR_EXTRACT DROP partition (ORIGINAL_FILE_DATE < '###SLICE_VALUE###')"
+flux.inline.exec-queries += "ALTER TABLE CDR.SPARK_IT_ZTE_ACC_NBR_EXTRACT DROP partition (ORIGINAL_FILE_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_ACCT_EXTRACT DROP partition (ORIGINAL_FILE_DATE  < '###SLICE_VALUE###')"
+flux.inline.exec-queries += "ALTER TABLE CDR.SPARK_IT_ZTE_ACCT_EXTRACT DROP partition (ORIGINAL_FILE_DATE  < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_BAL_EXTRACT DROP partition (ORIGINAL_FILE_DATE < '###SLICE_VALUE###')"
+flux.inline.exec-queries += "ALTER TABLE CDR.SPARK_IT_ZTE_BAL_EXTRACT DROP partition (ORIGINAL_FILE_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_BAL_SNAP DROP partition (ORIGINAL_FILE_DATE < '###SLICE_VALUE###')"
+flux.inline.exec-queries += "ALTER TABLE CDR.SPARK_IT_ZTE_BAL_SNAP DROP partition (ORIGINAL_FILE_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_CUST_EXTRACT DROP partition (ORIGINAL_FILE_DATE < '###SLICE_VALUE###')"
+flux.inline.exec-queries += "ALTER TABLE CDR.SPARK_IT_ZTE_CUST_EXTRACT DROP partition (ORIGINAL_FILE_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_DEL_EXPBAL DROP partition (ORIGINAL_FILE_DATE < '###SLICE_VALUE###')"
+flux.inline.exec-queries += "ALTER TABLE CDR.SPARK_IT_ZTE_DEL_EXPBAL DROP partition (ORIGINAL_FILE_DATE < '###SLICE_VALUE###')"
 
 flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_IPP_EXTRACT_TMP DROP partition (ORIGINAL_FILE_DATE < '###SLICE_VALUE###')"
 
