bascule de voice sms

--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -35,19 +35,19 @@ cronmanagerId = "001"
 //  }
 
 // Chargement de IN ZTE VOICE SMS PREPAID
-crontasks +=
-  {
-    instanceId = "LOAD_IT_VOICE_SMS",
-    cron = "0 */5 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-voice_sms.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_VOICE_SMS",
+//   cron = "0 */5 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-voice_sms.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement de IN ZTE SUBSCRIPTION
 //crontasks +=
