--- a/PROD/CONF/IN_ZTE/IT/load-spark-it-voice_sms.conf
+++ b/PROD/CONF/IN_ZTE/IT/load-spark-it-voice_sms.conf
@@ -13,18 +13,20 @@ flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
 
+flux.spark.setup-var +=  {"key": "date_offset","value": 3}
 
-flux.name = "LOAD_SPARK_IT_SUBSCRIPTION"
+
+flux.name = "LOAD_SPARK_IT_VOICE_SMS"
 
 flux.has-date-processing = false
 
 flux.hdfs.move-to-tt = true
-flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/IN_ZTE/SUBSCRIPTION/merged_*"
-flux.hdfs.dest-temp-tt-dir = "/PROD/TT/IN_ZTE/SUBSCRIPTION"
+flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/IN_ZTE/VOICE_SMS/merged*"
+flux.hdfs.dest-temp-tt-dir = "/PROD/TT/IN_ZTE/VOICE_SMS"
 
-flux.hdfs.move-to-arch = true
-flux.hdfs.src-arch-dir-regex = "/PROD/TT/IN_ZTE/SUBSCRIPTION/*"
-flux.hdfs.dest.arch-dir = "/PROD/ARCH/IN_ZTE/SUBSCRIPTION"
+flux.hdfs.move-to-arch =true
+flux.hdfs.src-arch-dir-regex = "/PROD/TT/IN_ZTE/VOICE_SMS/*"
+flux.hdfs.dest.arch-dir = "/PROD/ARCH/IN_ZTE/VOICE_SMS"
 flux.hdfs.dest.has-sub-dir = true
 flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 
@@ -37,12 +39,4 @@ flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
-
-flux.exec-queries += "/PROD/SCRIPTS/IT/IN_ZTE/SUBSCRIPTION/insert_into_spark_it_zte_subscription.hql"
-
-
-flux.hive.extra-conf += "--hivevar date_offset=3"
-flux.hive.extra-conf += "--hivevar cdr_type=ZTE_SUBSCRIPTION_CDR"
-flux.hive.extra-conf += "--hivevar file_date_index=-19"
-flux.hive.extra-conf += "--hivevar tt_table_name=CDR.TT_ZTE_SUBSCRIPTION"
-
+flux.exec-queries += "/PROD/SCRIPTS/IT/IN_ZTE/VOICE_SMS/insert_into_spark_it_zte_voice_sms.hql"
