account activity cron update

--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -252,7 +252,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_FT_ACCOUNT_ACTIVITY",
-    cron = "0 15/20 0 * * ?",
+    cron = "0 15/20 * * * ?",
     configFile = "/PROD/CONF/ACCOUNT_ACTIVITY/load-spark-ft-account-activity.conf",
     taskType = "BATCH"
     taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
