migrate hive to spark

--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -111,19 +111,19 @@ crontasks +=
 
 
 // Chargement de IN ZTE BALANCE_RESET
-crontasks +=
-  {
-    instanceId = "LOAD_IT_BALANCE_RESET",
-    cron = "0 */10 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-balance_reset.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "50 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_BALANCE_RESET",
+//    cron = "0 */10 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-balance_reset.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "50 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 // Chargement de IN ZTE EMERGENCY CREDIT
@@ -174,35 +174,35 @@ crontasks +=
 
 
 // Chargement de IN ZTE RECHARGE
-crontasks +=
-  {
-    instanceId = "LOAD_IT_RECHARGE",
-    cron = "0 5-59/10 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-recharge.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_RECHARGE",
+//    cron = "0 5-59/10 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-recharge.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 // Chargement de IN ZTE TRANSFER
-crontasks +=
-  {
-    instanceId = "LOAD_IT_TRANSFER",
-    cron = "0 */10 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-transfer.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_TRANSFER",
+//    cron = "0 */10 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-transfer.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 /////////////////////////////////////////////////////
