--- a/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-ft-data-da-usage-daily.conf
+++ b/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-ft-data-da-usage-daily.conf
@@ -34,7 +34,7 @@ flux.inline.exec-queries += "TRUNCATE TABLE MON.TT_DATA_DA_USAGE_DAILY"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/DA_USAGE_DAILY/compute_and_insert_into_ft_data_da_usage_daily.hql"
 flux.inline.post-exec-queries += "MERGE INTO MON.TT_DATA_DA_USAGE_DAILY AS a USING DIM.DT_BALANCE_TYPE_ITEM AS  b ON b.ACCT_ITEM_TYPE_ID = a.DA_NAME WHEN MATCHED  THEN UPDATE SET DA_NAME = UPPER(b.ACCT_RES_NAME),DA_UNIT=UPPER(b.ACCT_RES_RATING_UNIT),DA_TYPE=UPPER(b.ACCT_RES_RATING_TYPE)"
-flux.inline.post-exec-queries += "MERGE INTO MON.TT_DATA_DA_USAGE_DAILY AS a USING DIM.DT_RATING_EVENT AS  b ON b.RATING_EVENT_ID = a.SERVICE_ZONE WHEN MATCHED  THEN UPDATE SET SERVICE_ZONE = UPPER(b.RATING_EVENT_NAME)"
+flux.inline.post-exec-queries += "MERGE INTO MON.TT_DATA_DA_USAGE_DAILY AS a USING DIM.SPARK_DT_RATING_EVENT AS  b ON b.RATING_EVENT_ID = a.SERVICE_ZONE WHEN MATCHED  THEN UPDATE SET SERVICE_ZONE = UPPER(b.RATING_EVENT_NAME)"
 flux.inline.post-exec-queries += "MERGE INTO MON.TT_DATA_DA_USAGE_DAILY AS a USING DIM.DT_RATING_SERVICE_GROUP AS  b ON b.RATING_GROUP_ID = a.SERVICE_TYPE WHEN MATCHED  THEN UPDATE SET SERVICE_TYPE = UPPER(b.RATING_SERVICE_TYPE)"
 flux.inline.post-exec-queries += "INSERT  INTO MON.FT_DATA_DA_USAGE_DAILY PARTITION(SESSION_DATE) SELECT * FROM MON.TT_DATA_DA_USAGE_DAILY"
 flux.inline.post-exec-queries += "TRUNCATE TABLE MON.TT_DATA_DA_USAGE_DAILY"
