--- a/PROD/CONF/drop_it_partitions.conf
+++ b/PROD/CONF/drop_it_partitions.conf
@@ -27,7 +27,7 @@ flux.exec-query.execution.mode = "JDBC"
 
 flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_ADJUSTMENT DROP partition (CREATE_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_BALANCE_RESET DROP partition (BAL_RESET_DATE < '###SLICE_VALUE###')"
+flux.inline.exec-queries += "ALTER TABLE CDR.SPARK_IT_ZTE_BALANCE_RESET DROP partition (BAL_RESET_DATE < '###SLICE_VALUE###')"
 
 flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_CHECK_FILE DROP partition (CDR_DATE < '###SLICE_VALUE###')"
 
@@ -69,7 +69,7 @@ flux.inline.exec-queries += "ALTER TABLE PAY_DATE DROP partition (CREATE_DATE < 
 
 flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_SUBSCRIPTION DROP partition (CREATEDDATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_TRANSFER  DROP partition (PAY_DATE < '###SLICE_VALUE###')"
+flux.inline.exec-queries += "ALTER TABLE CDR.SPARK_IT_ZTE_TRANSFER  DROP partition (PAY_DATE < '###SLICE_VALUE###')"
 
 flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_VOICE_SMS DROP partition (START_DATE < '###SLICE_VALUE###')"
 
