bascule sur spark

--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -80,34 +80,34 @@ crontasks +=
   }
 
 // Chargement de IN ZTE VOICE_SMS_POST
-crontasks +=
-  {
-    instanceId = "LOAD_IT_BILLED_POST",
-    cron = "0 25-50/10 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-voice_sms_post.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "50 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_BILLED_POST",
+//    cron = "0 25-50/10 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-voice_sms_post.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "50 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement de IN ZTE ADJUSTMENT
-crontasks +=
-  {
-    instanceId = "LOAD_IT_ADJUSTMENT",
-    cron = "0 5-59/10 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-adjustment.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "50 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+// {
+//    instanceId = "LOAD_IT_ADJUSTMENT",
+//    cron = "0 5-59/10 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-adjustment.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//   timeout = "50 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 // Chargement de IN ZTE BALANCE_RESET
@@ -434,50 +434,50 @@ crontasks +=
 ////////////////////////////////////////////////////
 
 // Chargement de ZEBRA ZEBRA_CHECKFILE
-crontasks +=
-  {
-    instanceId = "LOAD_IT_ZEBRA_CHECKFILE",
-    cron = "50 5-59/15 * * * ?",
-    configFile = "/PROD/CONF/ZEBRA/IT/load-it-zebra-checkfile.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_ZEBRA_CHECKFILE",
+//    cron = "50 5-59/15 * * * ?",
+//    configFile = "/PROD/CONF/ZEBRA/IT/load-it-zebra-checkfile.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 // Chargement de ZEBRA ZEBRA_MASTER
-crontasks +=
-  {
-    instanceId = "LOAD_IT_ZEBRA_MASTER",
-    cron = "50 10-59/15 * * * ?",
-    configFile = "/PROD/CONF/ZEBRA/IT/load-it-zebra-master.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_ZEBRA_MASTER",
+//    cron = "50 10-59/15 * * * ?",
+//    configFile = "/PROD/CONF/ZEBRA/IT/load-it-zebra-master.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//     , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement de ZEBRA ZEBRA_TRANSAC
-crontasks +=
-  {
-    instanceId = "LOAD_IT_ZEBRA_TRANSAC",
-    cron = "50 */15 * * * ?",
-    configFile = "/PROD/CONF/ZEBRA/IT/load-it-zebra-transac.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_ZEBRA_TRANSAC",
+//    cron = "50 */15 * * * ?",
+//    configFile = "/PROD/CONF/ZEBRA/IT/load-it-zebra-transac.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 ///////////////////////////////////////////////////////
 ////                   CDR   P2P                    //
@@ -485,19 +485,19 @@ crontasks +=
 //
 
 // Chargement de IT P2P
-crontasks +=
-  {
-    instanceId = "LOAD_IT_P2P",
-    cron = "0 35 */1 * * ?",
-    configFile = "/PROD/CONF/P2P/load-it-p2p.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "120 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_P2P",
+//    cron = "0 35 */1 * * ?",
+//    configFile = "/PROD/CONF/P2P/load-it-p2p.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "120 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 /////////////////////////////////////////////////////
@@ -674,67 +674,67 @@ crontasks +=
 //--###**************************************#####---
 // Chargement de IT-CUSTOMER_SP_OTARIE
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_CUSTOMER_SP_OTARIE",
-    cron = "30 5-59/20 * * * ?",
-    configFile = "/PROD/CONF/OTARIE/IT/load-it-customer-sp-otarie.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "100 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_CUSTOMER_SP_OTARIE",
+//    cron = "30 5-59/20 * * * ?",
+//   configFile = "/PROD/CONF/OTARIE/IT/load-it-customer-sp-otarie.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "100 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement de IT_TRAFFIC_CUST_CELL_OTARIE
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_TRAFFIC_CUST_CELL_OTARIE",
-    cron = "30 10-59/20 * * * ?",
-    configFile = "/PROD/CONF/OTARIE/IT/load-it-traffic-cust-cell-otarie.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "100 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_TRAFFIC_CUST_CELL_OTARIE",
+//    cron = "30 10-59/20 * * * ?",
+//    configFile = "/PROD/CONF/OTARIE/IT/load-it-traffic-cust-cell-otarie.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "100 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement de IT_TRAFFIC_CUST_OTARIE
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_TRAFFIC_CUST_OTARIE",
-    cron = "30 15-59/20 * * * ?",
-    configFile = "/PROD/CONF/OTARIE/IT/load-it-traffic-cust-otarie.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "100 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_TRAFFIC_CUST_OTARIE",
+//    cron = "30 15-59/20 * * * ?",
+//    configFile = "/PROD/CONF/OTARIE/IT/load-it-traffic-cust-otarie.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "100 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement de IT_BDI
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_BDI",
-    cron = "30 15 */1 * * ?",
-    configFile = "/PROD/CONF/BDI/load-it-bdi.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "100 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_BDI",
+//    cron = "30 15 */1 * * ?",
+//    configFile = "/PROD/CONF/BDI/load-it-bdi.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "100 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement BASE IDENTIFICATION
 
