--- a/PROD/CONF/IN_ZTE/FT/load-spark-ft-voice-sms-post.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-ft-voice-sms-post.conf
@@ -1,7 +1,26 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.name = "LOAD_FT_BILLED_TRANSACTION_POST"
+flux.input-type = "HIVE" // Possible values are HDFS, HIVE
+flux.output-type = "HIVE" // Possible values are HDFS, HIVE, JDBC
+
+flux.spark.setup-conf = []
+
+flux.setup-conf = []
+
+
+flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
+flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
+flux.spark.setup-var += {"key": "cdr_type","value": "ZTE_VOICE_SMS_POST_CDR"}
+flux.spark.setup-var += {"key": "it_table_name","value": "CDR.SPARK_IT_ZTE_VOICE_SMS_POST"}
+flux.spark.setup-var += {"key": "it_partition_column","value": "FILE_DATE"}
+flux.spark.setup-var += {"key": "flux_type","value": "POSTPAID"}
+flux.spark.setup-var += {"key": "check_file_regex","value": "IN_ZTE_CHECK_FILELIST_POSTPAID_2"
+
+
+
+
+flux.name = "LOAD_SPARK_FT_BILLED_TRANSACTION_POST"
 
 flux.has-date-processing = true
 
@@ -17,49 +36,26 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = true
 
-flux.exec-query.execution.mode = "JDBC"
-
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/VOICE_SMS_POST/prequery_ft_voice_sms_post.hql"
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_completude.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/VOICE_SMS_POST/prequery_spark_ft_voice_sms_post.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_spark_completude.hql"
 
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
+flux.inline.exec-queries += "set hive.exec.dynamic.partition=true"
+flux.inline.exec-queries += "set hive.exec.dynamic.partition.mode=nonstrict"
+flux.inline.exec-queries += "set hive.enforce.bucketing=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=1"
-flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/VOICE_SMS_POST/compute_and_insert_into_ft_billed_transaction_postpaid.hql"
 
-//flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
-flux.inline.post-exec-queries += "ANALYZE TABLE MON.FT_BILLED_TRANSACTION_POSTPAID PARTITION(TRANSACTION_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
+flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/VOICE_SMS_POST/compute_and_insert_into_spark_ft_billed_transaction_postpaid.hql"
+
+//flux.inline.post-exec-queries += "ANALYZE TABLE MON.SPARK_FT_BILLED_TRANSACTION_POSTPAID PARTITION(TRANSACTION_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
 flux.inline.post-exec-queries += "ALTER TABLE AGG.FT_GSM_TRAFFIC_REVENUE_POST DROP PARTITION(TRANSACTION_DATE = '###SLICE_VALUE###')"
-flux.inline.post-exec-queries += "set hive.vectorized.execution.enabled=true"
-flux.inline.post-exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
-flux.inline.post-exec-queries += "set hive.exec.parallel=true"
-flux.inline.post-exec-queries += "SET hive.exec.reducers.max=1"
+
 flux.inline.post-exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.exec-queries += "DROP  TEMPORARY FUNCTION IF EXISTS FN_GET_OPERATOR_CODE"
 flux.inline.post-exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/GSM_TRAFFIC_REVENUE/insert_into_ft_gsm_traffic_revenue_post.hql"
-//lux.inline.post-exec-queries += "INSERT INTO FT_DAILY_STATUS SELECT '###SLICE_VALUE###' TABLE_DATE,'FTA' TABLE_TYPE, 'FT_GSM_TRAFFIC_REVENUE_POST' TABLE_NAME, NB_ROWS,TABLE_INSERT_DATE,CURRENT_TIMESTAMP INSERT_DATE FROM (SELECT COUNT(*) NB_ROWS,MAX(INSERT_DATE) TABLE_INSERT_DATE FROM  AGG.FT_GSM_TRAFFIC_REVENUE_POST WHERE TRANSACTION_DATE='###SLICE_VALUE###')T"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_gsm_post_activity.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_gsm_post.hql"
-
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
-flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
-
-flux.hive.extra-conf += "--hivevar cdr_type=ZTE_VOICE_SMS_POST_CDR"
-flux.hive.extra-conf += "--hivevar it_table_name=CDR.IT_ZTE_VOICE_SMS_POST"
-flux.hive.extra-conf += "--hivevar it_partition_column=START_DATE"
-flux.hive.extra-conf += "--hivevar date_offset=7"
-flux.hive.extra-conf += "--hivevar flux_type=POSTPAID"
-flux.hive.extra-conf += "--hivevar check_file_regex=IN_ZTE_CHECK_FILELIST_POSTPAID_2"
-
-
-
-
-flux.hive.extra-conf += "--hivevar table_type=FT"
-flux.hive.extra-conf += "--hivevar table_name=FT_BILLED_TRANSACTION_POSTPAID"
-flux.hive.extra-conf += "--hivevar insert_date_column=INSERT_DATE"
-flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_BILLED_TRANSACTION_POSTPAID"
-flux.hive.extra-conf += "--hivevar table_partition=TRANSACTION_DATE"
-
 
