--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -503,19 +503,19 @@ crontasks +=
 
 
 // Chargement FT IN ZTE VOICE_SMS_POST
-crontasks +=
-  {
-    instanceId = "LOAD_FT_BILLED_TRANSACTION_POST",
-    cron = "0 29 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms-post.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "65 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_BILLED_TRANSACTION_POST",
+//    cron = "0 29 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms-post.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "65 minutes"
+//    extraTaskParams : [
+//     {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement FT IN ZTE RECHARGE
 crontasks +=
