--- a/PROD/CONF/spark-collect-cron-tasks.conf
+++ b/PROD/CONF/spark-collect-cron-tasks.conf
@@ -466,3 +466,242 @@ crontasks +=
           , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
         ]
   }
+
+
+// Chargement de LOAD_SPARK_IT_ADJUSTMENT
+
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_IT_ADJUSTMENT",
+    cron = "0 5-59/10 * * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-adjustment.conf",
+    taskType = "BATCH"
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+    timeout = "50 minutes"
+    extraTaskParams : [
+          {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+          , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+          , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+          , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+          , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+          , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+          , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+          , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+          , {"param" : "--conf spark.network.timeout=360s"}
+          , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+        ]
+  }
+
+
+ // Chargement de LOAD_SPARK_IT_BILLED_POST
+
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_IT_BILLED_POST",
+    cron = "0 25-50/10 * * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-voice_sms_post.conf",
+    taskType = "BATCH"
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+    timeout = "50 minutes"
+    extraTaskParams : [
+          {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+          , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+          , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+          , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+          , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+          , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+          , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+          , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+          , {"param" : "--conf spark.network.timeout=360s"}
+          , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+        ]
+  }
+
+
+  // Chargement de LOAD_SPARK_IT_BDI
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_IT_BDI",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/BDI/load-spark-it-bdi.conf",
+    taskType = "BATCH"
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+    timeout = "100 minutes"
+    extraTaskParams : [
+          {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+          , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+          , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+          , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+          , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+          , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+          , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+          , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+          , {"param" : "--conf spark.network.timeout=360s"}
+          , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+        ]
+  }
+
+
+  // Chargement de LOAD_SPARK_IT_P2P
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_IT_P2P",
+    cron = "0 35 */1 * * ?",
+    configFile = "/PROD/CONF/P2P/load-spark-it-p2p.conf",
+    taskType = "BATCH"
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+    timeout = "100 minutes"
+    extraTaskParams : [
+          {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+          , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+          , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+          , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+          , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+          , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+          , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+          , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+          , {"param" : "--conf spark.network.timeout=360s"}
+          , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+        ]
+  }
+
+
+// Chargement de LOAD_SPARK_IT_ZEBRA_MASTER
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_IT_ZEBRA_MASTER",
+    cron = "0 35 */1 * * ?",
+    configFile = "/PROD/CONF/ZEBRA/IT/load-spark-it-zebra-checkfile.conf",
+    taskType = "BATCH"
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+    timeout = "100 minutes"
+    extraTaskParams : [
+          {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+          , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+          , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+          , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+          , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+          , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+          , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+          , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+          , {"param" : "--conf spark.network.timeout=360s"}
+          , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+        ]
+  }
+
+
+
+ // Chargement de LOAD_SPARK_IT_ZEBRA_MASTER
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_IT_ZEBRA_MASTER",
+    cron = "50 10-59/15 * * * ?",
+    configFile = "/PROD/CONF/ZEBRA/IT/load-spark-it-zebra-master.conf",
+    taskType = "BATCH"
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+    timeout = "100 minutes"
+    extraTaskParams : [
+          {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+          , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+          , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+          , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+          , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+          , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+          , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+          , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+          , {"param" : "--conf spark.network.timeout=360s"}
+          , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+        ]
+  }
+
+ // Chargement de LOAD_SPARK_IT_ZEBRA_TRANSAC
+ crontasks +=
+   {
+     instanceId = "LOAD_SPARK_IT_ZEBRA_TRANSAC",
+     cron = "50 */15 * * * ?",
+     configFile = "/PROD/CONF/ZEBRA/IT/load-spark-it-zebra-transac.conf",
+     taskType = "BATCH"
+     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+     timeout = "100 minutes"
+     extraTaskParams : [
+           {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+           , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+           , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+           , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+           , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+           , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+           , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+           , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+           , {"param" : "--conf spark.network.timeout=360s"}
+           , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+         ]
+   }
+
+ // Chargement de LOAD_SPARK_IT_CUSTOMER_SP_OTARIE
+ crontasks +=
+   {
+     instanceId = "LOAD_SPARK_IT_CUSTOMER_SP_OTARIE",
+     cron = "30 5-59/20 * * * ?",
+     configFile = "/PROD/CONF/OTARIE/IT/load-it-customer-sp-otarie.conf",
+     taskType = "BATCH"
+     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+     timeout = "100 minutes"
+     extraTaskParams : [
+           {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+           , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+           , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+           , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+           , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+           , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+           , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+           , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+           , {"param" : "--conf spark.network.timeout=360s"}
+           , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+         ]
+   }
+
+ // Chargement de LOAD_SPARK_IT_TRAFFIC_CUST_CELL_OTARIE
+ crontasks +=
+   {
+     instanceId = "LOAD_SPARK_IT_TRAFFIC_CUST_CELL_OTARIE",
+     cron = "30 10-59/20 * * * ?",
+     configFile = "/PROD/CONF/OTARIE/IT/load-it-traffic-cust-cell-otarie.conf",
+     taskType = "BATCH"
+     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+     timeout = "100 minutes"
+     extraTaskParams : [
+           {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+           , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+           , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+           , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+           , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+           , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+           , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+           , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+           , {"param" : "--conf spark.network.timeout=360s"}
+           , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+         ]
+   }
+
+ // Chargement de LOAD_SPARK_IT_TRAFFIC_CUST_OTARIE
+ crontasks +=
+   {
+     instanceId = "LOAD_SPARK_IT_TRAFFIC_CUST_OTARIE",
+     cron = "30 15-59/20 * * * ?",
+     configFile = "/PROD/CONF/OTARIE/IT/load-it-traffic-cust-cell-otarie.conf",
+     taskType = "BATCH"
+     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+     timeout = "100 minutes"
+     extraTaskParams : [
+           {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+           , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+           , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+           , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+           , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+           , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+           , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+           , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+           , {"param" : "--conf spark.network.timeout=360s"}
+           , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+         ]
+   }
