Tables SPARK data_post, emergency_data,emergency_credit

--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -65,19 +65,19 @@ crontasks +=
 //  }
 
 // Chargement de IN ZTE DATA_POST
-crontasks +=
-  {
-    instanceId = "LOAD_IT_CRA_GPRS_POST",
-    cron = "0 0-20/10 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-data-post.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "50 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//   instanceId = "LOAD_IT_CRA_GPRS_POST",
+//   cron = "0 0-20/10 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-data-post.conf",
+ //   taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+ //   timeout = "50 minutes"
+ //   extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+ //     , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//   ]
+ // }
 
 // Chargement de IN ZTE VOICE_SMS_POST
 crontasks +=
@@ -127,35 +127,35 @@ crontasks +=
 
 
 // Chargement de IN ZTE EMERGENCY CREDIT
-crontasks +=
-  {
-    instanceId = "LOAD_IT_EMERGENCY_CREDIT",
-    cron = "0 */10 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-emergency-credit.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "50 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+  //  instanceId = "LOAD_IT_EMERGENCY_CREDIT",
+ //   cron = "0 */10 * * * ?",
+ //   configFile = "/PROD/CONF/IN_ZTE/IT/load-it-emergency-credit.conf",
+ //   taskType = "HIVE"
+ //   taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "50 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+ //     , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+ //   ]
+//  }
 
 
 // Chargement de IN ZTE EMERGENCY DATA
-crontasks +=
-  {
-    instanceId = "LOAD_IT_EMERGENCY_DATA",
-    cron = "0 5-59/10 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-emergency-data.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "50 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_EMERGENCY_DATA",
+//   cron = "0 5-59/10 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-emergency-data.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "50 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement de IN ZTE PROFILE
 //crontasks +=
