--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -20,19 +20,19 @@ cronmanagerId = "002"
 //--###**************************************#####---
 
 // Chargement FT IN ZTE DATA POST
-crontasks +=
-  {
-    instanceId = "LOAD_FT_CRA_GPRS_POST",
-    cron = "0 0 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-cra-gprs-post.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "65 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_CRA_GPRS_POST",
+//    cron = "0 0 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-cra-gprs-post.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "65 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement FT IN ZTE VOICE_SMS
 crontasks +=
@@ -85,18 +85,18 @@ crontasks +=
 
 // Chargement FT IN ZTE EMERGENCY DATA
 crontasks +=
-  {
-    instanceId = "LOAD_FT_EMERGENCY_DATA",
-    cron = "0 4 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-emergency-data.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//  {
+//    instanceId = "LOAD_FT_EMERGENCY_DATA",
+//    cron = "0 4 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-emergency-data.conf",
+//    taskType = "HIVE"
+//   taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement FT IN ZTE DATA_TRANSFER
 crontasks +=
@@ -342,19 +342,19 @@ crontasks +=
 
 
 // Chargement FT IN ZTE EMERGENCY DATA
-crontasks +=
-  {
-    instanceId = "LOAD_FT_A_EMERGENCY_DATA",
-    cron = "0 19/20 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-emergency-data.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_A_EMERGENCY_DATA",
+//    cron = "0 19/20 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-emergency-data.conf",
+//    taskType = "HIVE"
+//   taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//   extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
  // Chargement FT_A IN ZTE DATA_TRANSFER
