--- a/PROD/CONF/MVAS/load-spark-it-smsc-mvas-a2p.conf
+++ b/PROD/CONF/MVAS/load-spark-it-smsc-mvas-a2p.conf
@@ -1,8 +1,13 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.input-type = "HIVE"
-flux.output-type = "HIVE"
+flux.input-type = "HIVE" // Possible values are HDFS, HIVE
+flux.output-type = "HIVE" // Possible values are HDFS, HIVE, JDBC
+
+flux.spark.setup-conf = []
+
+flux.setup-conf = []
+
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 
