--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -313,3 +313,77 @@ crontasks +=
       , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
+
+
+//--###**************************************#####---
+//--###        CHARGEMENT FT IN
+//--###**************************************#####---
+
+// Chargement SPARK FT IN ZTE DATA POST
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_FT_CRA_GPRS_POST",
+    cron = "0 0 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-cra-gprs-post.conf",
+    taskType = "BATCH"
+    taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
+    timeout = "65 minutes"
+    extraTaskParams : [
+          {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+          , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+          , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+          , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+          , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+          , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+          , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+          , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+          , {"param" : "--conf spark.network.timeout=360s"}
+          , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+        ]
+  }
+
+// Chargement SPARK FT IN ZTE EMERGENCY DATA
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_FT_EMERGENCY_DATA",
+    cron = "0 4 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-emergency-data.conf",
+    taskType = "BATCH"
+    taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
+    timeout = "30 minutes"
+    extraTaskParams : [
+              {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+              , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+              , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+              , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+              , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+              , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+              , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+              , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+              , {"param" : "--conf spark.network.timeout=360s"}
+              , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+            ]
+  }
+
+// Chargement SPARK FT IN ZTE EMERGENCY DATA
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_FT_A_EMERGENCY_DATA",
+    cron = "0 19/20 * * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-a-emergency-data.conf",
+    taskType = "BATCH"
+   taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
+    timeout = "30 minutes"
+   extraTaskParams : [
+                 {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+                 , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+                 , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+                 , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+                 , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+                 , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+                 , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+                 , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+                 , {"param" : "--conf spark.network.timeout=360s"}
+                 , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+               ]
+  }
