correction du probleme de p2p log

--- a/PROD/CONF/drop_it_partitions.conf
+++ b/PROD/CONF/drop_it_partitions.conf
@@ -102,7 +102,7 @@ flux.inline.exec-queries += "ALTER TABLE CDR.IT_OM_COMMISSIONS DROP partition (T
 
 //P2P
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_P2P_LOG DROP partition (START_DATE < '###SLICE_VALUE###')"
+flux.inline.exec-queries += "ALTER TABLE CDR.SPARK_IT_P2P_LOG DROP partition (START_DATE < '###SLICE_VALUE###')"
 
 //POKE_CALL
 
