migrate hive to spark

--- a/PROD/CONF/IN_ZTE/IT/load-spark-dt-rating-event.conf
+++ b/PROD/CONF/IN_ZTE/IT/load-spark-dt-rating-event.conf
@@ -10,6 +10,7 @@ flux.setup-conf = []
 
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
+flux.spark.setup-var += {"key": "date_offset","value": 3}
 
 
 flux.name = "LOAD_SPARK_DT_RATING_EVENT"
