--- a/PROD/CONF/IN_ZTE/IT/load-spark-it-transfer.conf
+++ b/PROD/CONF/IN_ZTE/IT/load-spark-it-transfer.conf
@@ -11,6 +11,7 @@ flux.setup-conf = []
 
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
+flux.spark.setup-var += {"key": "date_offset","value": 3}
 
 flux.name = "LOAD_SPARK_IT_TRANSFER"
 
